--- a/battleship.html
+++ b/battleship.html
@@ -26,7 +26,6 @@
             </form>
             <div class='battleship-overlay'></div>
         </div>
-        <!-- <script src="js.js"></script> -->
-        <script src="compiledJs.js"></script>
+        <script type="text/javascript" src="dist/bundle.js"></script>
     </body>
 </html>
